font smoothing added

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,9 +1,3 @@
-html {
-  font-size: 14px;
-  line-height: 1.2;
-  font-family: Roboto, sans-serif;
-}
-
 @font-face {
   font-family: 'Raleway';
   src: url(src/fonts/raleway/Raleway-Thin.ttf);
@@ -12,4 +6,12 @@ html {
 @font-face {
   font-family: 'Raleway Bold';
   src: url(src/fonts/raleway/Raleway-Regular.ttf);
+}
+
+html {
+  font-size: 14px;
+  line-height: 1.2;
+  font-family: 'Raleway', sans-serif;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
