--- a/sass/form.scss
+++ b/sass/form.scss
@@ -78,6 +78,7 @@ fieldset {
   }
 
   #select-choice {
+    padding-left: .5rem;
     font-size: 1.2rem;
     color: $pink;
     font-family: 'Raleway', sans-serif;
@@ -141,7 +142,7 @@ fieldset {
   border: 1px solid $grey;
 }
 
-.checkbox1, .radiobutton1 {
+.checkbox1 {
 
   border-bottom: 0;
   border-radius: 25px 25px 0 0;
@@ -153,7 +154,7 @@ fieldset {
   }
 }
 
-.checkbox2, .radiobutton3 {
+.checkbox2 {
 
   border-radius: 0 0 25px 25px;
 
@@ -162,14 +163,32 @@ fieldset {
   }
 }
 
-.radiobutton2 {
+.radiobutton1 {
+  border-bottom: 0;
+  border-radius: 25px 25px 0 0;
 
+  //@include respond-to('sm') {
+  //  border-bottom: 1px solid $grey;
+  //  border-right: 0;
+  //  border-radius: 25px 0 0 25px;
+  //}
+}
+
+.radiobutton2 {
   border-bottom: 0;
 
-  @include respond-to('sm') {
-    border-bottom: 1px solid $grey;
-    border-right: 0;
-  }
+  //@include respond-to('sm') {
+  //  border-bottom: 1px solid $grey;
+  //  border-right: 0;
+  //}
+}
+
+.radiobutton3 {
+  border-radius: 0 0 25px 25px;
+
+  //@include respond-to('sm') {
+  //  border-radius: 0 25px 25px 0;
+  //}
 }
 
 .submit-button {
@@ -227,8 +246,12 @@ textarea {
   padding: .5rem;
 }
 
-.car-preference {
-  label {
-    color: $pink;
-  }
+//.car-preference {
+//  label {
+//    color: $pink;
+//  }
+//}
+
+.radio {
+  color: $pink;
 }
