sprite added and form styling polished

--- a/sass/form.scss
+++ b/sass/form.scss
@@ -1,4 +1,5 @@
 @import "_mixins";
+@import "sprite";
 @import "_grid";
 @import "_typography";
 @import "_colors";
@@ -41,6 +42,10 @@ form {
   @include respond-to('sm') {
     margin: 50px auto;
     border-radius: 25px;
+  }
+
+  label {
+    font-size: .9rem;
   }
 }
 
@@ -102,26 +107,17 @@ fieldset {
     background-color: $black;
     outline: none;
   }
+
+  label {
+    background-color: transparent;
+  }
 }
 
-.car-preference, .feedback {
-  display: inline-block;
+.car-preference {
 
-  input[type="radio"] {
-    display: none;
-  }
-
-  input[type="radio"], label {
-    text-align: center;
-    width: 100%;
-  }
-
-  input[type="radio"]:checked + label {
-    background-color: $bordo;
-  }
-
-  label[for="textarea"] {
-    text-align: left;
+  .radio {
+    font-size: 1.2rem;
+    padding-left: 30px !important;
   }
 }
 
@@ -132,48 +128,20 @@ fieldset {
   }
 
   h4 {
+    color: $coral;
+    font-family: 'Raleway Bold', sans-serif;
     text-align: center;
+    font-weight: 100;
   }
+}
+
+input[type='radio'] {
+  margin-top: -27px;
+  z-index: 100;
 }
 
 .radio {
   padding: 10px !important;
-  border: 1px solid $grey;
-  color: $pink;
-}
-
-.checkbox1 {
-
-  border-bottom: 0;
-  border-radius: 25px 25px 0 0;
-
-  @include respond-to('sm') {
-    border-bottom: 1px solid $grey;
-    border-right: 0;
-    border-radius: 25px 0 0 25px;
-  }
-}
-
-.checkbox2 {
-
-  border-radius: 0 0 25px 25px;
-
-  @include respond-to('sm') {
-    border-radius: 0 25px 25px 0;
-  }
-}
-
-.radiobutton1 {
-  border-bottom: 0;
-  border-radius: 25px 25px 0 0;
-}
-
-.radiobutton2 {
-  border-bottom: 0;
-}
-
-.radiobutton3 {
-  border-radius: 0 0 25px 25px;
 }
 
 .submit-button {
@@ -202,6 +170,21 @@ fieldset {
 
 .feedback {
 
+  label {
+    padding-bottom: .5rem;
+  }
+
+  input[type='radio'] {
+    margin-top: -37px;
+    margin-left: -35px;
+    z-index: 10;
+  }
+
+  .radio {
+    font-size: 1.2rem;
+    padding-left: 40px !important;
+  }
+
   @include respond-to('sm') {
     position: absolute;
     top: 30px;
@@ -229,4 +212,18 @@ textarea {
   font-size: 1.2rem;
   font-family: 'Raleway', sans-serif;
   padding: .5rem;
+}
+
+.icon-click {
+  margin-top: -28px;
+  margin-left: calc(50% + 3.5rem);
+}
+
+.amazing {
+  margin-top: 1.2rem !important;
+  margin-bottom: 1.6rem !important;
+}
+
+.feedback-radio {
+  margin-left: 30px;
 }
