--- a/sass/form.scss
+++ b/sass/form.scss
@@ -1,15 +1,15 @@
 @import "_mixins";
-@import "sprite";
+@import "_sprite";
 @import "_grid";
 @import "_typography";
 @import "_colors";
 
 body {
-  font-family: 'Raleway', sans-serif;
   width: 100%;
-  margin: 0;
   min-width: 300px;
   max-width: 1200px;
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
   font-size: 1.2rem;
   color: $grey;
   background: url("src/images/background-image-mobile.jpeg") no-repeat center center fixed;
@@ -49,8 +49,13 @@ form {
   }
 }
 
-fieldset {
+.personal-details, .car-preference, .feedback {
   border: none;
+  margin: 0 0 2rem;
+
+  @include respond-to('sm') {
+    width: 45%;
+  }
 
   legend {
     font-family: 'Raleway Bold', sans-serif;
@@ -59,20 +64,28 @@ fieldset {
     color: $coral;
   }
 
+  label, input, textarea {
+    display: block;
+    width: 100%;
+    margin: 0;
+    background-color: $black;
+    outline: none;
+  }
+
   .field {
     padding: 20px 0;
 
     label {
-      margin-bottom: .5rem;
+      background-color: transparent;
     }
 
     input {
       border: none;
       border-bottom: 1px solid $grey;
-      font-size: 1.2rem;
       padding: .5rem;
-      color: $pink;
       font-family: 'Raleway', sans-serif;
+      font-size: 1.2rem;
+      color: $pink;
     }
   }
 
@@ -93,23 +106,17 @@ fieldset {
   }
 }
 
-.personal-details, .feedback, .car-preference {
-  margin: 0 0 2rem;
+.personal-details {
 
   @include respond-to('sm') {
-    width: 45%;
-  }
-
-  label, input, textarea {
-    display: block;
-    width: 100%;
-    margin: 0;
-    background-color: $black;
-    outline: none;
-  }
-
-  label {
-    background-color: transparent;
+    &:before {
+      width: 1px;
+      height: 540px;
+      border-right: 1px solid darken($black, 10);
+      position: absolute;
+      top: 30px;
+      left: 50%;
+    }
   }
 }
 
@@ -117,14 +124,35 @@ fieldset {
 
   .radio {
     font-size: 1.2rem;
-    padding-left: 30px !important;
+    padding: 10px 10px 10px 30px !important;
+  }
+
+  input[type='radio'] {
+    margin-top: -27px;
+    z-index: 1;
   }
 }
 
 .feedback {
 
+  @include respond-to('sm') {
+    position: absolute;
+    top: 30px;
+    left: 52.5%;
+    padding-left: 30px;
+  }
+
+  label {
+    padding-bottom: .5rem;
+  }
+
   textarea {
     resize: none;
+    border: 1px solid $grey;
+    color: $pink;
+    font-size: 1.2rem;
+    font-family: 'Raleway', sans-serif;
+    padding: .5rem;
   }
 
   h4 {
@@ -133,15 +161,23 @@ fieldset {
     text-align: center;
     font-weight: 100;
   }
-}
 
-input[type='radio'] {
-  margin-top: -27px;
-  z-index: 100;
-}
+  .feedback-radio {
+    margin-left: 30px;
 
-.radio {
-  padding: 10px !important;
+    .radio {
+      font-size: 1.2rem;
+      padding: 6px 6px 6px 40px !important;
+      margin-top: 1.2rem !important;
+      margin-bottom: 1.6rem !important;
+    }
+
+    input[type='radio'] {
+      margin-top: -37px;
+      margin-left: -35px;
+      z-index: 1;
+    }
+  }
 }
 
 .submit-button {
@@ -166,64 +202,10 @@ input[type='radio'] {
     outline: none;
     background-color: darken($bordo, 10);
   }
-}
 
-.feedback {
-
-  label {
-    padding-bottom: .5rem;
-  }
-
-  input[type='radio'] {
-    margin-top: -37px;
-    margin-left: -35px;
-    z-index: 10;
-  }
-
-  .radio {
-    font-size: 1.2rem;
-    padding-left: 40px !important;
-  }
-
-  @include respond-to('sm') {
-    position: absolute;
-    top: 30px;
-    left: 52.5%;
-    padding-left: 30px;
-  }
-}
-.personal-details {
-
-  @include respond-to('sm') {
-    &:before {
-      width: 1px;
-      height: 525px;
-      border-right: 1px solid darken($black, 10);
-      position: absolute;
-      top: 30px;
-      left: 50%;
-    }
+  .icon-click {
+    margin-top: -28px;
+    margin-left: calc(50% + 3.5rem);
   }
 }
 
-textarea {
-  border: 1px solid $grey;
-  color: $pink;
-  font-size: 1.2rem;
-  font-family: 'Raleway', sans-serif;
-  padding: .5rem;
-}
-
-.icon-click {
-  margin-top: -28px;
-  margin-left: calc(50% + 3.5rem);
-}
-
-.amazing {
-  margin-top: 1.2rem !important;
-  margin-bottom: 1.6rem !important;
-}
-
-.feedback-radio {
-  margin-left: 30px;
-}
