--- a/form.css
+++ b/form.css
@@ -1,3 +1,24 @@
+.icons {
+  background-image: url("src/images/sprite.png");
+  background-repeat: no-repeat;
+  display: block; }
+  .icons.icon-amazing {
+    background-position: -5px -5px;
+    width: 25px;
+    height: 25px; }
+  .icons.icon-click {
+    background-position: -5px -40px;
+    width: 22px;
+    height: 30px; }
+  .icons.icon-happy {
+    background-position: -5px -80px;
+    width: 25px;
+    height: 25px; }
+  .icons.icon-sad {
+    background-position: -5px -115px;
+    width: 25px;
+    height: 25px; }
+
 * {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -99,11 +120,11 @@ html {
   -moz-osx-font-smoothing: grayscale; }
 
 body {
-  font-family: 'Raleway', sans-serif;
   width: 100%;
-  margin: 0;
   min-width: 300px;
   max-width: 1200px;
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
   font-size: 1.2rem;
   color: #EAE1E3;
   background: url("src/images/background-image-mobile.jpeg") no-repeat center center fixed;
@@ -113,7 +134,6 @@ body {
       background-image: url("src/images/background-image.jpeg"); } }
   body:before {
     content: '';
-    pointer-events: none;
     position: fixed;
     background: rgba(65, 66, 78, 0.4);
     top: 0;
@@ -133,29 +153,41 @@ form {
     form {
       margin: 50px auto;
       border-radius: 25px; } }
+  form label {
+    font-size: .9rem; }
 
-fieldset {
-  border: none; }
-  fieldset legend {
+.personal-details, .car-preference, .feedback {
+  border: none;
+  margin: 0 0 2rem; }
+  @media (min-width: 700px) {
+    .personal-details, .car-preference, .feedback {
+      width: 45%; } }
+  .personal-details legend, .car-preference legend, .feedback legend {
     font-family: 'Raleway Bold', sans-serif;
     text-align: center;
     margin: 0 0 1rem 0;
     color: #FC5B6D; }
-  fieldset .field {
+  .personal-details label, .personal-details input, .personal-details textarea, .car-preference label, .car-preference input, .car-preference textarea, .feedback label, .feedback input, .feedback textarea {
+    display: block;
+    width: 100%;
+    margin: 0;
+    background-color: #41424E;
+    outline: none; }
+  .personal-details .field, .car-preference .field, .feedback .field {
     padding: 20px 0; }
-    fieldset .field label {
-      margin-bottom: .5rem; }
-    fieldset .field input {
+    .personal-details .field label, .car-preference .field label, .feedback .field label {
+      background-color: transparent; }
+    .personal-details .field input, .car-preference .field input, .feedback .field input {
       border: none;
       border-bottom: 1px solid #EAE1E3;
-      font-size: 1.2rem;
       padding: .5rem;
-      color: #D4B7BE;
-      font-family: 'Raleway', sans-serif; }
-  fieldset #select-choice-label {
+      font-family: 'Raleway', sans-serif;
+      font-size: 1.2rem;
+      color: #D4B7BE; }
+  .personal-details #select-choice-label, .car-preference #select-choice-label, .feedback #select-choice-label {
     padding: 20px 0 0;
     margin-bottom: 1rem; }
-  fieldset #select-choice {
+  .personal-details #select-choice, .car-preference #select-choice, .feedback #select-choice {
     padding-left: .5rem;
     font-size: 1.2rem;
     color: #D4B7BE;
@@ -165,63 +197,53 @@ fieldset {
     background-color: #41424E;
     outline: none; }
 
-.personal-details, .feedback, .car-preference {
-  margin: 0 0 2rem; }
-  @media (min-width: 700px) {
-    .personal-details, .feedback, .car-preference {
-      width: 45%; } }
-  .personal-details label, .personal-details input, .personal-details textarea, .feedback label, .feedback input, .feedback textarea, .car-preference label, .car-preference input, .car-preference textarea {
-    display: block;
-    width: 100%;
-    margin: 0;
-    background-color: #41424E;
-    outline: none; }
+@media (min-width: 700px) {
+  .personal-details:before {
+    width: 1px;
+    height: 540px;
+    border-right: 1px solid #2a2a32;
+    position: absolute;
+    top: 30px;
+    left: 50%; } }
 
-.car-preference, .feedback {
-  display: inline-block; }
-  .car-preference input[type="radio"], .feedback input[type="radio"] {
-    display: none; }
-  .car-preference input[type="radio"], .car-preference label, .feedback input[type="radio"], .feedback label {
-    text-align: center;
-    width: 100%; }
-  .car-preference input[type="radio"]:checked + label, .feedback input[type="radio"]:checked + label {
-    background-color: #9D4956; }
-  .car-preference label[for="textarea"], .feedback label[for="textarea"] {
-    text-align: left; }
+.car-preference .radio {
+  font-size: 1.2rem;
+  padding: 10px 10px 10px 30px !important; }
+.car-preference input[type='radio'] {
+  margin-top: -27px;
+  z-index: 1; }
 
+@media (min-width: 700px) {
+  .feedback {
+    position: absolute;
+    top: 30px;
+    left: 52.5%;
+    padding-left: 30px; } }
+.feedback label {
+  padding-bottom: .5rem; }
 .feedback textarea {
-  resize: none; }
+  resize: none;
+  border: 1px solid #EAE1E3;
+  color: #D4B7BE;
+  font-size: 1.2rem;
+  font-family: 'Raleway', sans-serif;
+  padding: .5rem; }
 .feedback h4 {
-  text-align: center; }
-
-.radio {
-  padding: 10px !important;
-  border: 1px solid #EAE1E3; }
-
-.checkbox1 {
-  border-bottom: 0;
-  border-radius: 25px 25px 0 0; }
-  @media (min-width: 700px) {
-    .checkbox1 {
-      border-bottom: 1px solid #EAE1E3;
-      border-right: 0;
-      border-radius: 25px 0 0 25px; } }
-
-.checkbox2 {
-  border-radius: 0 0 25px 25px; }
-  @media (min-width: 700px) {
-    .checkbox2 {
-      border-radius: 0 25px 25px 0; } }
-
-.radiobutton1 {
-  border-bottom: 0;
-  border-radius: 25px 25px 0 0; }
-
-.radiobutton2 {
-  border-bottom: 0; }
-
-.radiobutton3 {
-  border-radius: 0 0 25px 25px; }
+  color: #FC5B6D;
+  font-family: 'Raleway Bold', sans-serif;
+  text-align: center;
+  font-weight: 100; }
+.feedback .feedback-radio {
+  margin-left: 30px; }
+  .feedback .feedback-radio .radio {
+    font-size: 1.2rem;
+    padding: 6px 6px 6px 40px !important;
+    margin-top: 1.2rem !important;
+    margin-bottom: 1.6rem !important; }
+  .feedback .feedback-radio input[type='radio'] {
+    margin-top: -37px;
+    margin-left: -35px;
+    z-index: 1; }
 
 .submit-button {
   margin: 1rem auto;
@@ -241,31 +263,8 @@ fieldset {
   .submit-button:active {
     outline: none;
     background-color: #7a3943; }
-
-@media (min-width: 700px) {
-  .feedback {
-    position: absolute;
-    top: 30px;
-    left: 52.5%;
-    padding-left: 30px; } }
-
-@media (min-width: 700px) {
-  .personal-details:before {
-    width: 1px;
-    height: 525px;
-    border-right: 1px solid #2a2a32;
-    position: absolute;
-    top: 30px;
-    left: 50%; } }
-
-textarea {
-  border: 1px solid #EAE1E3;
-  color: #D4B7BE;
-  font-size: 1.2rem;
-  font-family: 'Raleway', sans-serif;
-  padding: .5rem; }
-
-.radio {
-  color: #D4B7BE; }
+  .submit-button .icon-click {
+    margin-top: -28px;
+    margin-left: calc(50% + 3.5rem); }
 
 /*# sourceMappingURL=form.css.map */
