--- a/sass/form.scss
+++ b/sass/form.scss
@@ -120,16 +120,66 @@ form {
   }
 }
 
-.car-preference {
+.car-preference, .feedback {
+  display: inline-block;
 
-  .radio {
-    font-size: 1.2rem;
-    padding: 10px 10px 10px 30px !important;
+  input[type="radio"] {
+    display: none;
   }
 
-  input[type='radio'] {
-    margin-top: -27px;
-    z-index: 1;
+  input[type="radio"], label {
+    text-align: center;
+    width: 100%;
+
+    &:hover {
+      background-color: darken($black, 5);
+    }
+  }
+
+  input[type="radio"]:checked + label {
+    background-color: $bordo;
+  }
+
+  label[for="textarea"] {
+    text-align: left;
+  }
+
+  .radio {
+    padding: 10px !important;
+    border: 1px solid $grey;
+    color: $pink;
+  }
+
+  .checkbox1 {
+    border-bottom: 0;
+    border-radius: 25px 25px 0 0;
+
+    @include respond-to('sm') {
+      border-bottom: 1px solid $grey;
+      border-right: 0;
+      border-radius: 25px 0 0 25px;
+    }
+  }
+
+  .checkbox2 {
+    border-radius: 0 0 25px 25px;
+
+    @include respond-to('sm') {
+      border-radius: 0 25px 25px 0;
+    }
+  }
+
+  .radiobutton1 {
+    border-bottom: 0;
+    border-radius: 25px 25px 0 0;
+  }
+
+  .radiobutton2 {
+    border-bottom: 0;
+  }
+
+  .radiobutton3 {
+    border-radius: 0 0 25px 25px;
   }
 }
 
@@ -161,23 +211,6 @@ form {
     text-align: center;
     font-weight: 100;
   }
-
-  .feedback-radio {
-    margin-left: 30px;
-
-    .radio {
-      font-size: 1.2rem;
-      padding: 6px 6px 6px 40px !important;
-      margin-top: 1.2rem !important;
-      margin-bottom: 1.6rem !important;
-    }
-
-    input[type='radio'] {
-      margin-top: -37px;
-      margin-left: -35px;
-      z-index: 1;
-    }
-  }
 }
 
 .submit-button {
@@ -208,4 +241,3 @@ form {
     margin-left: calc(50% + 3.5rem);
   }
 }
-
